Added some missing JPMS module definitions.